--- a/trunk/govnoquoter/www/templates/css/style.css
+++ b/trunk/govnoquoter/www/templates/css/style.css
@@ -669,6 +669,10 @@ form dl dt
 	margin: 0.5em 0 0.2em 0;
 }
 
+form dl dd {
+    padding-bottom: 0.3em;
+}
+
 form dl dd input
 {
 	font-family: "Calibri", "Arial", "Verdana", "Serif";
@@ -719,8 +723,8 @@ form p input#remember
 
 form dl.errors
 {
-    padding-top: 0.5em;
-    padding-bottom: 1em;
+    padding-top: 0;
+    padding-bottom: 0.5em;
 }
 
 form dl.errors dd ol
