--- a/govnoquoter/www/templates/css/style.css
+++ b/govnoquoter/www/templates/css/style.css
@@ -161,7 +161,7 @@ div#userpane.expanded .pane-content
 div#userpane .submit-holder {
     text-align: right;
     padding-top: 0.3em;
-    margin-right: 0.6em;
+    margin-right: 0;
 }
 
 .pane-content p {
