--- a/trunk/govnoquoter/www/css/style.css
+++ b/trunk/govnoquoter/www/css/style.css
@@ -923,6 +923,6 @@ div#footer address span a
 }
 
 /* Geshi bold line-height hack */
-.kw1, .kw2, .kw3, .kw4 .kw5, .kw6, .kw7, .kw8, .li2, .es_h, .es0, .es1, .es2, .es3, .es4, .es5, .es6, .sy0, .imp, .nu0 {
+.kw1, .kw2, .kw3, .kw4, .kw5, .kw6, .kw7, .kw8, .li2, .es_h, .es0, .es1, .es2, .es3, .es4, .es5, .es6, .sy0, .imp, .nu0 {
     line-height: 16px;
 }
