--- a/govnoquoter/www/css/style.css
+++ b/govnoquoter/www/css/style.css
@@ -498,6 +498,11 @@ div.entry-comments ul .hcomment .entry-comment-wrapper:hover
     background-color: #F6F6F6;
 }
 
+div.entry-comments ul .hcomment .entry-comment-wrapper.highlight
+{
+    background-color: #FFF9DF;
+}
+
 div.entry-comments ul .hcomment ul
 {
 	margin-left: 2.5em;
